--- a/Codigos/style.css
+++ b/Codigos/style.css
@@ -1,4 +1,25 @@
 .Imagen{
-    background-image: url("Produtos-naturais-1.jpg");
+    background-image: url("Imagens/Produtos-naturais-1.jpg");
     background-size: cover;
+}
+
+.app{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center
+    
+}
+
+.Produtos{
+    width: 250px;
+    height: 270px;
+    border:2px solid black; 
+
+}
+
+footer{
+    max-width: 100%;
+    height: 50px;
+    
 }
